updated interests + language

--- a/index.html
+++ b/index.html
@@ -5,106 +5,103 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Theo Richardson</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
+    <head>
+        <title>Theo Richardson</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+    </head>
+    <body class="is-preload">
+        <!-- Header -->
+        <section id="header">
+	    <header>
+	      <span class="image avatar"><img src="images/avatar.png" alt="" /></span>
+	      <h1 id="logo"><a href="#">Theo Richardson</a></h1>
+	      <p><strong>Graduate Student in Astronomy<br />
+		University of Florida</strong><br />
+		(Go Gators)</p>
+	    </header>
+	    <nav id="nav">
+	      <ul>
+		<li><a href="#home" class="active">Home</a></li>
+		<li><a href="#research">Research</a></li>
+		<li><a href="#cv">CV</a></li>
+	      </ul>
+	    </nav>
+	    <footer>
+	      <ul class="icons">
+		<li><a href="https://facebook.com/theo.richardson.336" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+		<li><a href="https://github.com/richardson-t" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+		<li><a href="mailto:richardson.t@ufl.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+	      </ul>
+	    </footer>
+	</section>
+	<!-- Wrapper -->
+	<div id="wrapper">
+	    <!-- Main -->
+	    <div id="main">
+	        <!-- One -->
+		<section id="home">
+		  <div class="image main" data-position="center">
+		    <img src="images/bg.jpg" alt="" />
+		    <a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px" href="https://unsplash.com/@bryangoffphoto?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Bryan Goff"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-2px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg></span><span style="display:inline-block;padding:2px 3px">Bryan Goff</span></a>
+		  </div>
+		  <div class="container">
+		    <header class="major">
+		      <h2>Hello there.</h2>
+		      <p>Please enjoy your stay.</p>
+		    </header>
+		    <p>My research focuses on theoretical aspects of star formation and protostellar evolution. I also drum sometimes!</p>
+		  </div>
+		</section>
 
-		<!-- Header -->
-			<section id="header">
-				<header>
-					<span class="image avatar"><img src="images/avatar.png" alt="" /></span>
-					<h1 id="logo"><a href="#">Theo Richardson</a></h1>
-					<p><strong>Graduate Student in Astronomy<br />
-					University of Florida</strong><br />
-					(Go Gators)</p>
-				</header>
-				<nav id="nav">
-					<ul>
-						<li><a href="#home" class="active">Home</a></li>
-						<li><a href="#research">Research</a></li>
-						<li><a href="#cv">CV</a></li>
-					</ul>
-				</nav>
-				<footer>
-					<ul class="icons">
-						<li><a href="https://facebook.com/theo.richardson.336" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="https://github.com/richardson-t" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="mailto:richardson.t@ufl.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-				</footer>
-			</section>
+		<!-- Two -->
+		<section id="research">
+                  <div class="container">
+                    <h3>My Interests</h3>
+                    <p>What gets me up in the morning.</p>
+                    <div class="features">
+                      <article>
+                        <a href="#" class="image"><img src="images/pmf.png" alt="" /></a>
+                        <div class="inner">
+                          <h4>The IMF</h4>
+                          <p>Under the umbrella of ALMA-IMF, I'd like to better constrain the stellar initial mass function through use of models of stars to make synthetic observations of star-forming regions.</p>
+                        </div>
+                      </article>
+		      <article>
+                        <a href="#" class="image"><img src="images/colorcolor.png" alt="" /></a>
+                        <div class="inner">
+                          <h4>Protostellar clusters</h4>
+                          <p>As part of the above effort, I'm trying to model realistic clusters of protostars.</p>
+                        </div>
+                      </article>
+                      <article>
+                        <a href="#" class="image"><img src="images/hr.png" alt="" /></a>
+                        <div class="inner">
+                          <h4>Star formation theory</h4>
+                          <p>I'm also interested in modeling the mechanisms of star formation and resulting effects on stellar populations.</p>
+                        </div>
+                      </article>
+                    </div>
+                  </div>
+                </section>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+		<!-- Three -->
+		<section id="cv">
+                  <div class="container">
+                    <h3>Abbreviated CV</h3>
+		    <p>For my long-form CV, click <a href="richardson_cv.pdf" download="" class="btn btn-lg btn-outline">here</a>.</p>
+		    <ul class="feature-icons">
+		      <li class="icon solid fa-graduation-cap">B.A. in Astronomy, Cornell University, 2019</li>
+		      <li class="icon solid fa-chalkboard">Instructor for AST-1022L: Astronomy Laboratory, 2020</li>
+		      <li class="icon solid fa-award">McKnight Fellow, 2019-</li>
+		      <!-- <li class="icon solid fa-book">Publications forthcoming!</li> -->
+		    </ul>
+                  </div>
+                </section>
 
-				<!-- Main -->
-					<div id="main">
-
-						<!-- One -->
-							<section id="home">
-								<div class="image main" data-position="center">
-								  <img src="images/bg.jpg" alt="" />
-								  <a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px" href="https://unsplash.com/@bryangoffphoto?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Bryan Goff"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-2px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg></span><span style="display:inline-block;padding:2px 3px">Bryan Goff</span></a>
-								</div>
-								<div class="container">
-									<header class="major">
-										<h2>Hello there.</h2>
-										<p>I do things.</p>
-									</header>
-									<p>My research focuses on modeling aspects of the formation of star clusters and protostellar evolution. I also drum sometimes!</p>
-								</div>
-							</section>
-
-						<!-- Two -->
-                                                        <section id="research">
-                                                                <div class="container">
-                                                                        <h3>My Interests</h3>
-                                                                        <p>What gets me up in the morning.</p>
-                                                                        <div class="features">
-                                                                                <article>
-                                                                                        <a href="#" class="image"><img src="images/pmf.png" alt="" /></a>
-                                                                                        <div class="inner">
-                                                                                                <h4>The IMF</h4>
-                                                                                                <p>I'm working to better constrain the stellar initial mass function in star-forming regions by making predictions about expected flux from protostars.</p>
-                                                                                        </div>
-                                                                                </article>
-                                                                                <article>
-                                                                                        <a href="#" class="image"><img src="images/hr.png" alt="" /></a>
-                                                                                        <div class="inner">
-                                                                                                <h4>Protostellar Evolution</h4>
-                                                                                                <p>I'm also trying to model different pathways of star formation and their effects on the birth of stellar populations.</p>
-                                                                                        </div>
-                                                                                </article>
-                                                                                <article>
-                                                                                        <a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-                                                                                        <div class="inner">
-                                                                                                <h4>Something</h4>
-                                                                                                <p>Maybe someday I'll have a third thing</p>
-                                                                                        </div>
-                                                                                </article>
-                                                                        </div>
-                                                                </div>
-                                                        </section>
-						<!-- Three -->
-							<section id="cv">
-                                                                <div class="container">
-                                                                        <h3>Abbreviated CV</h3>
-                                                                        <p>For my long-form CV, click
-									<a href="richardson_cv.pdf" download="" class="btn btn-lg btn-outline">here</a>.</p>
-                                                                        <ul class="feature-icons">
-                                                                          <li class="icon solid fa-graduation-cap">B.A. in Astronomy, Cornell University, 2019</li>
-									  <li class="icon solid fa-chalkboard">Instructor for AST-1022L: Astronomy Laboratory, 2020</li>
-									  <li class="icon solid fa-book">Still working on publications but hopefully soon!</li>
-                                                                        </ul>
-                                                                </div>
-                                                        </section>
-
-						<!-- Four -->
-							<section id="four">
+		<!-- Four -->
+		<section id="four">
 <!--								<div class="container">
 									<h3>Contact Me</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
