--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 		<section id="cv">
                   <div class="container">
                     <h3>Abbreviated CV</h3>
-		    <p>For my long-form CV, click <a href="richardson_cv.pdf" download="" class="btn btn-lg btn-outline">here</a>.</p>
+		    <p>For my long-form CV, click <a href="cv.pdf" target="blank" download="" class="btn btn-lg btn-outline">here</a>.</p>
 		    <ul class="feature-icons">
 		      <li class="icon solid fa-graduation-cap">B.A. in Astronomy, Cornell University, 2019</li>
 		      <li class="icon solid fa-chalkboard">Instructor for AST-1022L: Astronomy Laboratory, 2020</li>
