--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<!-- Two -->
 		<section id="research">
                   <div class="container">
-                    <h3>My Interests</h3>
+                    <h3>Current Work</h3>
                     <p>What gets me up in the morning.</p>
                     <div class="features">
                       <article>
