new cv+slight changes

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 		    <ul class="feature-icons">
 		      <li class="icon solid fa-graduation-cap">B.A. in Astronomy, Cornell University, 2019</li>
 		      <li class="icon solid fa-chalkboard">Instructor for AST-1022L: Astronomy Laboratory, 2020</li>
-		      <li class="icon solid fa-award">McKnight Fellow, University of Florida, 2019-now</li>
+		      <li class="icon solid fa-award">McKnight Doctoral Fellow, 2019-now</li>
 		      <!-- <li class="icon solid fa-book">Publications forthcoming!</li> -->
 		    </ul>
                   </div>
