--- a/index.html
+++ b/index.html
@@ -66,21 +66,21 @@
                         <a href="#" class="image"><img src="images/pmf.png" alt="" /></a>
                         <div class="inner">
                           <h4>The IMF</h4>
-                          <p>Under the umbrella of ALMA-IMF, I'd like to better constrain the stellar initial mass function through use of models of stars to make synthetic observations of star-forming regions.</p>
+                          <p>Under the umbrella of ALMA-IMF, I'd like to better constrain the stellar initial mass function through synthetic observations of protostellar populations.</p>
                         </div>
                       </article>
 		      <article>
-                        <a href="#" class="image"><img src="images/colorcolor.png" alt="" /></a>
+                        <a href="#" class="image"><img src="images/proto_hr.png" alt="" /></a>
                         <div class="inner">
-                          <h4>Protostellar clusters</h4>
-                          <p>As part of the above effort, I'm trying to model realistic clusters of protostars.</p>
+                          <h4>Protostar SED modeling</h4>
+                          <p>As part of the above effort, I'm using existing theories of protostellar accretion to model the radiation of young stellar objects, both individually and in clusters.</p>
                         </div>
                       </article>
                       <article>
-                        <a href="#" class="image"><img src="images/hr.png" alt="" /></a>
+                        <a href="#" class="image"><img src="images/rt_temp.png" alt="" /></a>
                         <div class="inner">
-                          <h4>Star formation theory</h4>
-                          <p>I'm also interested in modeling the mechanisms of star formation and resulting effects on stellar populations.</p>
+                          <h4>Radiative transfer modeling</h4>
+                          <p>I'm also interested in radiative transfer simulations, primarily as they apply to YSO models across different physical environments.</p>
                         </div>
                       </article>
                     </div>
