make current for Fall 2024

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	    </nav>
 	    <footer>
 	      <ul class="icons">
-		<li><a href="https://facebook.com/theo.richardson.336" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+<!--		<li><a href="https://facebook.com/theo.richardson.336" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
 		<li><a href="https://github.com/richardson-t" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
 		<li><a href="mailto:richardson.t@ufl.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 	      </ul>
@@ -93,9 +93,9 @@
                     <h3>Abbreviated CV</h3>
 		    <p>For my long-form CV, click <a href="cv.pdf" target="blank" class="btn btn-lg btn-outline">here</a>.</p>
 		    <ul class="feature-icons">
-		      <li class="icon solid fa-graduation-cap">B.A. in Astronomy, Cornell University, 2019</li>
-		      <li class="icon solid fa-chalkboard">Instructor for AST-1022L: Astronomy Laboratory, 2020</li>
-		      <li class="icon solid fa-award">McKnight Doctoral Fellow, 2019-now</li>
+		      <li class="icon solid fa-graduation-cap">M.S. in Astronomy, University of Florida, 2022</li>
+		      <li class="icon solid fa-chalkboard">Instructor for IDS 2935: Knowledge and the Universe, 2023</li>
+		      <li class="icon solid fa-award">McKnight Doctoral Fellow, 2019-2024</li>
 		      <!-- <li class="icon solid fa-book">Publications forthcoming!</li> -->
 		    </ul>
                   </div>
