--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	    <header>
 	      <span class="image avatar"><img src="images/avatar.png" alt="" /></span>
 	      <h1 id="logo"><a href="#">Theo Richardson</a></h1>
-	      <p><strong>Graduate Student in Astronomy<br />
+	      <p><strong>Postdoctoral Associate<br />
 		University of Florida</strong><br />
 		(Go Gators)</p>
 	    </header>
@@ -93,7 +93,7 @@
                     <h3>Abbreviated CV</h3>
 		    <p>For my long-form CV, click <a href="cv.pdf" target="blank" class="btn btn-lg btn-outline">here</a>.</p>
 		    <ul class="feature-icons">
-		      <li class="icon solid fa-graduation-cap">M.S. in Astronomy, University of Florida, 2022</li>
+		      <li class="icon solid fa-graduation-cap">Ph.D. in Astronomy, University of Florida, 2025 (my <a href="thesis.pdf" target="blank" class="btn btn-lg btn-outline">thesis</a>)</li>
 		      <li class="icon solid fa-chalkboard">Instructor for IDS 2935: Knowledge and the Universe, 2023</li>
 		      <li class="icon solid fa-award">McKnight Doctoral Fellow, 2019-2024</li>
 		      <!-- <li class="icon solid fa-book">Publications forthcoming!</li> -->
